# myagent

./: .gitignore  Dockerfile.sandbox  config.example.yaml  config.yaml  config.yaml.example  core精简.md  fastapi重构.md  mcp兼容(自研).md  mcp兼容（fastapi）方案.md  modify_plan.py  myagent_state.db  myagent_state.db-shm  myagent_state.db-wal  pyproject.toml  scratch.py  scratch_test.py  search_tool.py  test.docx  test2.docx  test_docx.py  test_edit.docx  test_empty_run.py  test_fail.py  test_file_edit.py  test_log.py  tool升级.md  tool升级V3.MD  turn_抽象.md  会话重构.md  命令.txt  多用户支持.md  实施方案V3.md  工具增强.md  工具展示.md  热加载.md  精简core-review.md
.opencode/plans/: 精简.md
audit_logs/: audit.jsonl
config/: onlyoffice-local.json  prompt.txt  safety_rules.yaml
data/: users.json
examples/: __init__.py  demo_hot_reload.py
myagent/: __init__.py  factory.py
myagent/context/: __init__.py  manager.py  message.py  state.py  user_state.py
myagent/core/: __init__.py  agent.py  cancellation.py  commander.py  events.py  factory.py  hareness-原型.py  harness.py  hitl.py  hook.py  llm.py  loop.py  models.py  parser.py  permissions.py  session.py  session_manager.py  stream.py  tools.py  turns.py  workspace.py  workspace_resolver.py
myagent/observability/: __init__.py  audit_logger.py  events.py  level.py  masker.py
myagent/prompt/: __init__.py  renderer.py  skills.py  template.py  variables.py
myagent/providers/: __init__.py  (+6 more)
phase3_plan/: phase3.md  phase3_精简.md  phase3实施计划.md
scratch/: test_agent_restore_fix.py  test_agent_save_fix.py  test_audit_fix.py  test_fix.py  test_hook_manager_fix.py  test_imports.py
tests/: test_events.py  test_file_query.py  test_file_tools_docx.py  test_file_tools_table_edit.py  test_history.py  test_model_selection.py  test_prompt_template.py  test_provider_router.py  test_restore.py  test_safety_approval.py  test_session_serializer.py  test_skills.py  test_tool_visibility.py  test_turns.py  test_workspace_files.py  test_workspace_resolver.py
web/: index.html
回滚/: myagent-core-agent-1.py  myagent-core-loop-1.py  myagent-core-loop.py  myagent-provider-router.py
旧方案/: implementation_plan.md  phase2实施方案_back.md  实施方案V2.md  提升.md
设计讨论/: hook设计.md  phase1实施方案.md  phase2实施方案.md
(+125 files in other folders)
