[project]
name = "myagent"
version = "0.1.0"
description = "全自研生产级异步 Python Agent 框架"
requires-python = ">=3.12"

dependencies = [
    # LLM Provider
    "openai>=1.0",
    "anthropic>=0.40",
    "httpx>=0.27",

    # 数据模型
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # CLI 界面
    "rich>=13.0",
    "click>=8.0",

    # Web 框架（FastAPI 统一 HTTP + WebSocket + 静态文件）
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",

    # 配置 & 应用日志
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "picologging>=0.9",

    # 审计日志
    "aiofiles>=23.0",
    "aiosqlite>=0.20",

    # 文件解析（file_read 多格式支持）
    "pdfplumber>=0.10",
    "PyMuPDF>=1.24",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "chardet>=5.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "ruff"]
postgres = ["asyncpg>=0.29"]

[project.scripts]
myagent = "myagent.interfaces.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["openai.*", "anthropic.*", "aiosqlite.*"]
ignore_missing_imports = true
